fix footer overlap

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -17,7 +17,7 @@ footer
    left: 0px
    width: 1280px
    height: 72px
-   z-index: 4
+   z-index: 99
    clear:top
    margin-top: 60px
    text-align: center
